[gd_scene load_steps=16 format=3 uid="uid://0xr62xbdhe2a"]

[ext_resource type="Script" path="res://gacha_seat.gd" id="1_6jpsu"]
[ext_resource type="Texture2D" uid="uid://c3hgs7b216py" path="res://картинки/1.png" id="2_vujlt"]
[ext_resource type="Texture2D" uid="uid://cmk08vveo8q3m" path="res://2.png" id="3_xsinp"]
[ext_resource type="Texture2D" uid="uid://bg2j84ithb0q4" path="res://3.png" id="4_i16by"]
[ext_resource type="Texture2D" uid="uid://bxbk34nk86vrl" path="res://5be164e80a0b2166e8722a69.png" id="5_11657"]
[ext_resource type="AudioStream" uid="uid://coo6wo5karn44" path="res://Gorillaz - Feel good inc. (Gachi mix).mp3" id="12_idl8w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0lw62"]
load_path = "res://.godot/imported/1.png-d0b53a471f9bf788dc7791c16ed13058.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_73oma"]
load_path = "res://.godot/imported/2.png-e7feabe988266fc192d5e39231c3b044.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3q8qo"]
load_path = "res://.godot/imported/3.png-f95b4f13edc77364efcf6e55e02a84ba.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_oj4bo"]
load_path = "res://.godot/imported/4.png-a267ef52e370e7f076580a1fd2022cf6.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v5qtl"]
load_path = "res://.godot/imported/5.png-9619175990c3f70d51b9a96138bfdf8f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_x2x2w"]
load_path = "res://.godot/imported/сидит.png-dc55b8f37d9bef0fd7901816faeb8085.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_mxdmr"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vujlt")
}, {
"duration": 1.0,
"texture": ExtResource("3_xsinp")
}, {
"duration": 1.0,
"texture": ExtResource("4_i16by")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_11657")
}],
"loop": true,
"name": &"live",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_0lw62")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_73oma")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_3q8qo")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_oj4bo")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_v5qtl")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_x2x2w")
}],
"loop": false,
"name": &"shot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jbms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1ar6"]
size = Vector2(1383.45, 30.0501)

[node name="сидящий враг" type="CharacterBody2D"]
scale = Vector2(0.399, 0.399)
collision_layer = 13
collision_mask = 13
script = ExtResource("1_6jpsu")

[node name="Анимация_сидящего_врага" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mxdmr")
animation = &"live"

[node name="Area2D" type="Area2D" parent="."]

[node name="colusion_gacha2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 17)
scale = Vector2(9.08448, 17.3932)
shape = SubResource("RectangleShape2D_4jbms")

[node name="colusion_gacha" type="CollisionShape2D" parent="."]
position = Vector2(-3, 17)
scale = Vector2(8.7168, 16.6892)
shape = SubResource("RectangleShape2D_4jbms")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_idl8w")

[node name="радиус_шутинга" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="радиус_шутинга"]
position = Vector2(771.936, -2.5188)
shape = SubResource("RectangleShape2D_c1ar6")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(117.794, -130.326)

[connection signal="animation_finished" from="Анимация_сидящего_врага" to="." method="_on_animated_sprite_2d_animation_finished" flags=18]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered" flags=18]
[connection signal="body_entered" from="радиус_шутинга" to="." method="_on___body_entered" flags=18]
[connection signal="body_shape_entered" from="радиус_шутинга" to="." method="_on___body_shape_entered"]
